--- a/README
+++ b/README
@@ -59,3 +59,8 @@ CREATE TABLE payments (
     payment_date TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
     FOREIGN KEY (user_id) REFERENCES users(user_id) ON DELETE CASCADE
 );
+
+
+HOÀN THÀNH NÚT MUA NGAY
+CART , PAYMENT DATABASE LÀM GÌ ?
+
