--- a/README
+++ b/README
@@ -1,6 +1,7 @@
 CREATE DATABASE myphamstore;
 USE myphamstore;
 
+-- Bảng users lưu trữ thông tin người dùng
 CREATE TABLE users (
     user_id INT(11) AUTO_INCREMENT PRIMARY KEY,
     fullname VARCHAR(100),
@@ -10,6 +11,7 @@ CREATE TABLE users (
     role ENUM('member', 'admin')
 );
 
+-- Bảng products lưu trữ thông tin sản phẩm
 CREATE TABLE products (
     product_id INT(11) AUTO_INCREMENT PRIMARY KEY,
     product_name VARCHAR(150),
@@ -18,6 +20,15 @@ CREATE TABLE products (
     image VARCHAR(255)
 );
 
+-- Bảng stock lưu trữ số lượng tồn kho của sản phẩm
+CREATE TABLE stock (
+    stock_id INT(11) AUTO_INCREMENT PRIMARY KEY,
+    product_id INT(11),
+    quantity_in_stock INT(11) DEFAULT 0,
+    FOREIGN KEY (product_id) REFERENCES products(product_id) ON DELETE CASCADE
+);
+
+-- Bảng cart lưu trữ thông tin giỏ hàng của người dùng
 CREATE TABLE cart (
     cart_id INT(11) AUTO_INCREMENT PRIMARY KEY,
     user_id INT(11),
@@ -27,6 +38,7 @@ CREATE TABLE cart (
     FOREIGN KEY (product_id) REFERENCES products(product_id) ON DELETE CASCADE
 );
 
+-- Bảng orders lưu trữ thông tin đơn hàng của người dùng
 CREATE TABLE orders (
     order_id INT(11) AUTO_INCREMENT PRIMARY KEY,
     user_id INT(11),
@@ -39,6 +51,7 @@ CREATE TABLE orders (
     FOREIGN KEY (user_id) REFERENCES users(user_id) ON DELETE CASCADE
 );
 
+-- Bảng orderdetails lưu trữ chi tiết đơn hàng
 CREATE TABLE orderdetails (
     order_detail_id INT(11) AUTO_INCREMENT PRIMARY KEY,
     order_id INT(11),
@@ -49,6 +62,7 @@ CREATE TABLE orderdetails (
     FOREIGN KEY (product_id) REFERENCES products(product_id) ON DELETE CASCADE
 );
 
+-- Bảng payments lưu trữ thông tin thanh toán của người dùng
 CREATE TABLE payments (
     payment_id INT(11) AUTO_INCREMENT PRIMARY KEY,
     user_id INT(11),
@@ -59,8 +73,3 @@ CREATE TABLE payments (
     payment_date TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
     FOREIGN KEY (user_id) REFERENCES users(user_id) ON DELETE CASCADE
 );
-
-
-HOÀN THÀNH NÚT MUA NGAY
-CART , PAYMENT DATABASE LÀM GÌ ?
-
